--- a/src/app/trips/trip-details/trip-details.component.scss
+++ b/src/app/trips/trip-details/trip-details.component.scss
@@ -6,3 +6,14 @@ h4{
 .subtitle {
   font-weight: bold;
 }
+
+.add {
+  color: #2196F3;
+  font-weight: bold;
+}
+
+.add-user {
+  font-style: italic;
+  color: #ff3a36;
+}
+
