--- a/src/app/trips/trip-add/trip-add.component.scss
+++ b/src/app/trips/trip-add/trip-add.component.scss
@@ -1,3 +1,13 @@
 .subtitle {
   font-weight: bold;
 }
+
+.add {
+  color: #2196F3;
+  font-weight: bold;
+}
+
+.add-user {
+  font-style: italic;
+  color: #ff3a36;
+}
