--- a/src/app/core/layout-components/nav/nav.component.scss
+++ b/src/app/core/layout-components/nav/nav.component.scss
@@ -37,8 +37,13 @@
   background-color: transparent;
   color: white;
   vertical-align: middle;
+  font-weight: normal;
 }
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.navbar-user i {
+  padding-right: 5px;
 }
