changed apartments icon

--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -13,7 +13,7 @@
       </a>
       <a mat-list-item (click)="navigate('apartments')" *ngIf="isAdmin">
         <i class="material-icons">
-          account_balance
+          hotel
         </i>
         Apartments
       </a>
