--- a/src/app/shared/components/btn-cancel/btn-cancel.component.html
+++ b/src/app/shared/components/btn-cancel/btn-cancel.component.html
@@ -1,1 +1,1 @@
-<button [disabled]="isDisabled" class="btn btn-secondary" (click)="onClick()">{{label}}</button>
+<button [disabled]="isDisabled" class="btn btn-outline-secondary" (click)="onClick()">{{label}}</button>
