--- a/src/app/users/components/user-list/user-list.component.scss
+++ b/src/app/users/components/user-list/user-list.component.scss
@@ -1,5 +1,5 @@
-@import "../../utilities/colors";
-@import "../../utilities/mixin-variables";
+@import "../../../utilities/colors";
+@import "../../../utilities/mixin-variables";
 
 
 .modal-holder {
