--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -6,6 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item (click)="navigate('users')">Users</a>
+      <a mat-list-item (click)="navigate('users/details')">Users details</a>
       <a mat-list-item (click)="navigate('apartments')">Apartments</a>
       <a mat-list-item (click)="navigate('events')">Calendar</a>
     </mat-nav-list>
