--- a/src/app/events/components/details/event-owner-details/event-owner-details.component.html
+++ b/src/app/events/components/details/event-owner-details/event-owner-details.component.html
@@ -32,7 +32,7 @@
       <td>{{user.name}}</td>
       <td>{{user.surname}}</td>
       <td>{{user.email}}</td>
-      <td>{{user.status}}</td>
+      <td>{{user.status | eventUserStatusPipe}}</td>
     </tr>
     </tbody>
   </table>
