Improved alert messages, fixed trip merge and user availability validation

--- a/src/app/shared/components/other-expense/other-expense.component.html
+++ b/src/app/shared/components/other-expense/other-expense.component.html
@@ -3,7 +3,7 @@
   <form-row forInput="count" label="Quantity" [isInvalid]="submitted && f.count.invalid" errorText="Count is invalid">
     <input type="number" class="form-control" formControlName="count" id="count" [ngClass]="{'is-invalid': submitted && f.count.invalid}">
   </form-row>
-  <form-row forInput="price" label="Total Price" [isInvalid]="submitted && f.price.invalid" errorText="Count is invalid">
+  <form-row forInput="price" label="Total Price (€)" [isInvalid]="submitted && f.price.invalid" errorText="Count is invalid">
     <input type="number" class="form-control" formControlName="price" id="price" [ngClass]="{'is-invalid': submitted && f.count.invalid}">
   </form-row>
   <div class="form-group form-check">
