--- a/src/app/trips/trip-list/trip-list.component.html
+++ b/src/app/trips/trip-list/trip-list.component.html
@@ -17,7 +17,7 @@
       <td>{{el.sourceAddress.street}} {{el.sourceAddress.apartmentNumber}}, {{el.sourceAddress.city}}</td>
       <td>{{el.destinationAddress.street}} {{el.destinationAddress.apartmentNumber}}, {{el.destinationAddress.city}}</td>
       <td>{{el.departure | date: 'medium'}}</td>
-      <td>{{el.status | tripStatusPipe}}</td>
+      <td [ngStyle]="{'color': el.status | tripStatusColorPipe}">{{el.status | tripStatusPipe}}</td>
       <td>
         <a [routerLink]="[el.id]">
           <mat-icon style="cursor: pointer;">settings</mat-icon>
