--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -11,8 +11,9 @@
         </i>
         Users
       </a>
-      <a mat-list-item (click)="navigate('users/details')" *ngIf="isAdmin">Users details
-        <i class="material-icons">card</i>
+      <a mat-list-item (click)="navigate('users/details')" *ngIf="isAdmin">
+        <i class="material-icons">supervisor_account</i>
+        User Management
       </a>
       <a mat-list-item (click)="navigate('apartments')" *ngIf="isAdmin">
         <i class="material-icons">
@@ -27,10 +28,16 @@
         Calendar
       </a>
       <a mat-list-item (click)="navigate('trips')" *ngIf="isAdmin || isOrganiser">
+      <i class="material-icons">
+        transfer_within_a_station
+      </i>
+      Trips
+    </a>
+      <a mat-list-item (click)="navigate('trips/user')" *ngIf="isAdmin || isUser || isOrganiser">
         <i class="material-icons">
           transfer_within_a_station
         </i>
-        Trips
+        My Trips
       </a>
     </mat-nav-list>
   </mat-sidenav>
