--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -12,7 +12,7 @@
         Users
       </a>
       <a mat-list-item (click)="navigate('users/details')" *ngIf="isAdmin">
-        <i class="material-icons">supervisor_account</i>
+        <i class="material-icons">group_add</i>
         User Management
       </a>
       <a mat-list-item (click)="navigate('apartments')" *ngIf="isAdmin">
@@ -35,7 +35,7 @@
     </a>
       <a mat-list-item (click)="navigate('trips/user')" *ngIf="isAdmin || isUser || isOrganiser">
         <i class="material-icons">
-          transfer_within_a_station
+          directions_run
         </i>
         My Trips
       </a>
