--- a/src/app/trips/trip-user-add-modal/trip-user-add-modal.component.html
+++ b/src/app/trips/trip-user-add-modal/trip-user-add-modal.component.html
@@ -5,7 +5,7 @@
 <form [formGroup]="formSettings" (ngSubmit)="submitForm()" class="modal-body">
   <form-row forInput="userId" label="User" [isInvalid]="submitted && formSettings.controls.userId.invalid" errorText="User is invalid">
     <select class="form-control" formControlName="userId" id="userId" [ngClass]="{'is-invalid': submitted && formSettings.controls.userId.invalid}">
-      <option *ngFor="let user of users" [value]="user.id">{{user.name}} {{user.lastName}}</option>
+      <option *ngFor="let user of users" [value]="user.userId">{{user.name}} {{user.lastName}}</option>
     </select>
   </form-row>
   <form-row forInput="flightTicket" label="Flight ticket">
@@ -14,9 +14,9 @@
   <form-row forInput="carRent" label="Car for rent">
     <input type="text" class="form-control" formControlName="carRent" id="carRent">
   </form-row>
-  <div class="form-group form-check">
-    <input type="checkbox" (click)="residenceSwitch()" class="form-check-input" formControlName="inApartment" id="inApartment">
-    <label class="form-check-label" for="inApartment">Has user place in apartments?</label>
+  <div class="form-group custom-control custom-checkbox">
+    <input type="checkbox" (click)="residenceSwitch()" class="custom-control-input" formControlName="inApartment" id="inApartment">
+    <label class="custom-control-label" for="inApartment">Has user place in apartments?</label>
   </div>
   <div *ngIf="!livesInApartment">
     <form-row forInput="residenceAddress" label="Residence address" [isInvalid]="submitted && formSettings.controls.residenceAddress.invalid" errorText="Residence address is invalid">
