--- a/src/app/apartments/reservation-list/reservation-list.component.html
+++ b/src/app/apartments/reservation-list/reservation-list.component.html
@@ -1,9 +1,9 @@
-<h2>Users</h2>
-<div class="spinner-div" *ngIf="!usersLoaded">
+<h2>Reservations</h2>
+<div class="spinner-div" *ngIf="!reservationsLoaded">
   <mat-spinner></mat-spinner>
 </div>
 <br>
-<div *ngIf="usersLoaded" class="container">
+<div *ngIf="reservationsLoaded" class="container">
   <table mdbTable class="z-depth-0">
     <thead>
       <tr>
@@ -11,27 +11,20 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let el of users; let i = index">
+      <tr *ngFor="let el of reservations; let i = index">
         <th scope="row">{{pageable.number*pageable.size + i + 1}}</th>
-        <td>{{el.name}}</td>
-        <td>{{el.surname}}</td>
-        <td>{{el.email}}</td>
-        <td>{{el.role | userRolePipe}}</td>
+        <td>{{el.places}}</td>
+        <td>{{el.from | date: 'yyyy/MM/dd HH:mm'}}</td>
+        <td>{{el.till | date: 'yyyy/MM/dd HH:mm'}}</td>
         <td>{{el.createdAt | date: 'yyyy/MM/dd HH:mm'}}</td>
-        <td>{{el.status | userStatusPipe}}</td>
-        <td>
-          <mat-icon style="cursor: pointer" (click)="updateUser(el.id)">create</mat-icon>
-        </td>
       </tr>
     </tbody>
     <tfoot class="grey lighten-5 w-100">
       <tr>
-        <td colspan="8">
+        <td [colSpan]="headElements.length">
           <paginator [pageable]="pageable" (nextPageClick)="nextPage()" (previousPageClick)="previousPage()"></paginator>
         </td>
       </tr>
     </tfoot>
   </table>
 </div>
-<btn-primary (click)="addUser()" label="Add new user"></btn-primary>
-
