--- a/src/app/trips/trip-details/trip-details.component.html
+++ b/src/app/trips/trip-details/trip-details.component.html
@@ -46,7 +46,7 @@
         <td>{{getUserNameById(el.userId)}}</td>
         <td>{{el.flightTicket}}</td>
         <td>{{el.carRent}}</td>
-        <td>{{el.inApartment ? '-' : el.residenceAddress}}</td>
+        <td>{{el.inApartment ? 'In apartment' : el.residenceAddress}}</td>
         <td>
           <mat-icon style="cursor: pointer" *ngIf="isEditable" (click)="removeUserFromList(el.userId)">delete</mat-icon>
         </td>
