--- a/src/app/core/layout-components/nav/nav.component.html
+++ b/src/app/core/layout-components/nav/nav.component.html
@@ -15,7 +15,7 @@
         <i class="material-icons">group_add</i>
         User Management
       </a>
-      <a mat-list-item (click)="navigate('apartments')" *ngIf="isAdmin">
+      <a mat-list-item (click)="navigate('apartments')" *ngIf="isAdmin || isOrganiser">
         <i class="material-icons">
           hotel
         </i>
