validate after today

--- a/src/app/events/components/details/event-add-modal/event-add-modal.component.html
+++ b/src/app/events/components/details/event-add-modal/event-add-modal.component.html
@@ -19,6 +19,8 @@
       <input type="text" [owlDateTime]="dt2" [owlDateTimeTrigger]="dt2"
              class="form-control" formControlName="start" [min]="currentDate"
              id="start" [ngClass]="{'is-invalid': submitted && f.start.invalid}">
+      <invalid-feedback [isInvalid]="submitted && form.hasError('startDate')"
+                        errorText="Invalid start date."></invalid-feedback>
       <owl-date-time #dt2></owl-date-time>
     </form-row>
 
